Source/WebCore: Shadow DOM: RenderTreePosition miscomputed when display:contents value changes https://bugs.webkit.org/show_bug.cgi?id=158072 rdar://problem/25766333

Reviewed by Darin Adler.

Test: fast/shadow-dom/slot-crash.html

* style/RenderTreePosition.h:
(WebCore::RenderTreePosition::invalidateNextSibling):

    Add unconditional invalidation function.

* style/RenderTreeUpdater.cpp:
(WebCore::RenderTreeUpdater::updateElementRenderer):

    With display:contents rendering siblings may be found from the subtree and the existing cached
    position may become invalid.
    If the display:contents value changes invalidate the current render tree position.

LayoutTests:
Shadow DOM: RenderTreePosition should determine if element has display:contents from new style
https://bugs.webkit.org/show_bug.cgi?id=158072

Reviewed by Darin Adler.

* fast/shadow-dom/slot-crash.html: Added.



Canonical link: https://commits.webkit.org/176196@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201393 268f45cc-cd09-0410-ab3c-d52691b4dbfc